--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -8,7 +8,7 @@
             <label for="body">Post</label>
             <textarea name="postBody" id="body" class="form-control" placeholder="" cols="30"  rows="5"></textarea>
         </div>
-        <button class="btn btn-primary" type="submit" name="button">Publish</button>
+        <button class="btn" type="submit" name="button">Publish</button>
     </form>
 
 
