--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,10 +2,10 @@
 <div class="footer-padding"></div>
 <div class="footer">
   <!-- <p>SPY-EYE 👓</p> -->
-  <i class="social-icon fab fa-facebook-f fa-2x"></i>
-  <i class="social-icon fab fa-twitter  fa-2x"></i>
-  <i class="social-icon fab fa-github  fa-2x"></i>
-  <i class="social-icon fas fa-envelope  fa-2x"></i>
+  <a href=""><i class="social-icon fab fa-facebook-f fa-2x"></i></a>
+  <a href=""><i class="social-icon fab fa-twitter  fa-2x"></i></a>
+  <a href=""><i class="social-icon fab fa-github  fa-2x"></i></a>
+  <a href=""><i class="social-icon fas fa-envelope  fa-2x"></i></a>
 </div>
 </div>
 
