--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,8 +16,13 @@
             <%= post.content.substring(0,100) + " ...." %>
                 <a href="/post/<%= post._id %>">Read More</a>
         </p>
+        <hr>
 
         <% }); %>
+
+    <form action="/compose">
+        <button type="submit" class="btn">Compose</button>
+    </form>
 
 <%- include("partials/footer") -%>
 
