--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,6 +20,12 @@
         <li id="home"><a href="/">HOME</a></li>
         <li id="about"><a href="/about">ABOUT US</a></li>
         <li id="contact"><a href="/contact">CONTACT US</a></li>
+        <li>
+          <form action=""><button type="submit" class="btn">Login</button></form>
+        </li>
+        <li>
+          <form action=""><button type="submit" class="btn">Sign Up</button></form>
+        </li>
       </ul>
     </div>
   </nav>
