--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
 
         <% }); %>
 
-    <form action="/compose">
+    <form id="compose" action="/compose">
         <button type="submit" class="btn">Compose</button>
     </form>
 
